fixed cross browser compatibility of text overflowing

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 .container {
-  overflow: hidden;
+  word-wrap: break-word;
   background: slategray;
   border-radius: 10px;
   padding: 2rem 1rem;
@@ -41,6 +41,7 @@ body {
 .btn:active {
   background: transparent;
   color: #fff;
+  outline: none;
 }
 
 .func-btn {
@@ -51,6 +52,7 @@ body {
   padding: 3rem 1rem 0 1rem;
   grid-area: a;
   word-wrap: break-word;
+  word-break: break-all;
   background: #fff;
   font-size: 2rem;
   text-align: right;
